# simple-wizard-rust

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_COMPLETE.md  GIT_COMMIT_SUMMARY.md  MODULARIZATION_COMPLETE.md  Makefile  PROJECT_TREE.txt  README.md  REFACTORING_SUMMARY.md  UI_IMPROVEMENTS.md  quick_test.sh  test_response.sh  test_wizard.sh
docs/: API_COMPATIBILITY.md  API_VERIFICATION.md  CHANGELOG.md  COMPLETION_STATUS.md  FILE_DIALOGS_COMPLETE.md  FINAL_STATUS.md  IMPLEMENTATION.md  INDEX.md  NATIVE_FILE_DIALOGS.md  NOTES.md  PORTING_COMPLETE.md  PORT_SUMMARY.md  QUICKSTART.md  REFACTORING_PLAN.md  RESPONSE_MECHANISM.md  SOCKET_STATUS.md
examples/: README.md  example_install.sh  example_install_lib.rs
src/: client.rs  lib.rs  pages.rs  wizard.rs
src/pages/: mod.rs  validation.rs
src/wizard/: app.rs  mod.rs  socket.rs  state.rs  types.rs
src/wizard/ui/: mod.rs  pages.rs  panels.rs
