[package]
name = "simple-wizard-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
tokio = { version = "1.0", features = ["full", "sync"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"

[[bin]]
name = "simple-wizard"
path = "src/bin/wizard.rs"

[[bin]]
name = "simple-wizard-client"
path = "src/bin/client.rs"

[lib]
name = "simple_wizard"
path = "src/lib.rs"
